@@ -58,6 +58,7 @@ login_description=Authenticate by User Account
 login_short_title=Log In
 logout_description=Clear Authentication Data
 logout_short_title=Log Out
+quote_title=Quote #%1%
 quote_report_description=Report Quote
 quote_rating_up_description=Quote Rating Up
 quote_rating_down_description=Quote Rating Down
