@@ -48,6 +48,7 @@ login_description=Gebruikersaccount openen
 login_short_title=Inloggen
 logout_description=Inloggegevens verwijderen
 logout_short_title=Uitloggen
+quote_title=Quote %1%
 administration_description=Administratie-interface
 administration_short_title=Admin
 quote_report_description=Quote rapporteren
